--- a/style/preloader.css
+++ b/style/preloader.css
@@ -1,19 +1,16 @@
-body{
-    margin: 0;
+#pre-loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #000a12;
+  z-index: 9999;
 }
-#preloader{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(241, 242, 243, 0.53);
-    z-index: 9999;
-}
-#preloader img{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+
+#pre-loader img {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
