--- a/style/style.css
+++ b/style/style.css
@@ -87,6 +87,7 @@ body{
 .btn{
     display: grid;
     position: relative;
+    top: 30px;
     left: 600px;
     justify-content: center;
     align-items: center;
@@ -579,7 +580,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0,0,0,-1), #f06);
+    background: linear-gradient(rgba(0,0,0,-1), #833471 );
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1853,7 +1854,6 @@ body{
 @media all and (min-width: 1441px) and (max-width: 2560px){
 
 }
-
 
 
 
